@@ -26,4 +26,4 @@ Collate: 'dimensions.r' 'helper-arrange.r' 'helper-col-wise.r'
     'progress.r' 'quote.r' 'rbind-matrix.r' 'rbind.r'
     'simplify-array.r' 'simplify-data-frame.r' 'simplify-vector.r'
     'split-array.r' 'split-data-frame.r' 'split-indices.r' 'split.r'
-    'utils.r'
+    'utils.r' 'loop-apply.r'
