@@ -7,7 +7,6 @@
 #' @param n largest integer (may not appear in index)
 #' @useDynLib plyr
 #' @keywords internal manip
-split_indices <- function(index, group, n = max(group)) {
-  if (length(index) == 0) return(integer())
-  .Call("split_indices", index, group, as.integer(n))
+loop_apply <- function(n, f, env = parent.frame()) {
+  .Call("loop_apply", as.integer(n), f, env)
 }
