@@ -45,3 +45,17 @@
 "bench-dlply.r","6i-a",2010-07-20 13:46:52,"67da54f",0.248,0.033,0.281
 "bench-dlply.r","6i-b",2010-07-20 13:46:52,"67da54f",0.631,0.034,0.666
 "bench-dlply.r","6i-c",2010-07-20 13:46:57,"67da54f",4.123,0.072,4.229
+"bench-llply.r","1e5",2010-07-20 15:17:10,"6562dda",0.461,0.035,0.497
+"bench-llply.r","1e6",2010-07-20 15:17:16,"6562dda",5.668,0.047,5.718
+"bench-llply.r","1e5",2010-07-20 15:17:18,"6562dda",0.461,0.042,0.503
+"bench-llply.r","1e6",2010-07-20 15:17:23,"6562dda",5.591,0.025,5.621
+"bench-dlply.r","6-a",2010-07-20 15:17:29,"6562dda",1.505,0.415,1.921
+"bench-dlply.r","6-b",2010-07-20 15:17:35,"6562dda",3.503,2.072,5.58
+"bench-dlply.r","6i-a",2010-07-20 15:17:35,"6562dda",0.251,0.032,0.283
+"bench-dlply.r","6i-b",2010-07-20 15:17:36,"6562dda",0.65,0.048,0.697
+"bench-dlply.r","6i-c",2010-07-20 15:17:40,"6562dda",4.182,0.07,4.255
+"bench-dlply.r","6-a",2010-07-20 15:17:45,"6562dda",1.169,0.375,1.545
+"bench-dlply.r","6-b",2010-07-20 15:17:51,"6562dda",3.524,1.959,5.484
+"bench-dlply.r","6i-a",2010-07-20 15:17:51,"6562dda",0.247,0.029,0.276
+"bench-dlply.r","6i-b",2010-07-20 15:17:52,"6562dda",0.638,0.031,0.67
+"bench-dlply.r","6i-c",2010-07-20 15:17:56,"6562dda",4.132,0.062,4.196
